added get User by ID
