# backend/public/swagger/swagger.yaml
@@ -819,6 +819,32 @@ paths:
         -
           bearerAuth: []
   '/users/{id}':
+    get:
+      tags:
+        - Users
+      summary: 'Get specific user details'
+      description: 'Return informations for an user with specific id'
+      operationId: getUserById
+      parameters:
+        - name: id
+          in: path
+          description: 'user Id to fetch'
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 'User fetched successfully'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: 'User not found'
+        '500':
+          description: 'Server Error'
+      security:
+        - bearerAuth: [ ]
     delete:
       tags:
         - Users
